/**
 * @author Victor
 * @since 28/04/2022 - 10:13
 */
public interface Vacunable {
	void vacunar();
}